--- a/elements.html
+++ b/elements.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa/IR" dir="rtl">
+<html lang="fa-IR" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <title>elements</title>
@@ -25,39 +25,36 @@
       }
 
       #parallax1 {
-        background-image: url("/photos/evening.jpg"); /* تصویر اول */
+        background-image: url("/photos/evening.jpg");
       }
-
       #parallax2 {
-        background-image: url("/photos/evening\ 2.jpg"); /* تصویر دوم */
+        background-image: url("/photos/evening 2.jpg");
       }
-
       #parallax3 {
-        background-image: url("/photos/evening\ 3.png"); /* تصویر سوم */
+        background-image: url("/photos/evening 3.png");
       }
       #parallax4 {
-        background-image: url("/photos/evening\ 2.jpg"); /* تصویر اول */
+        background-image: url("/photos/evening 2.jpg");
       }
-
       #parallax5 {
-        background-image: url("/photos/evening\ 5.jpg"); /* تصویر دوم */
+        background-image: url("/photos/evening 5.jpg");
       }
-
       #parallax6 {
-        background-image: url("/photos/evening\ 6.jpg"); /* تصویر سوم */
+        background-image: url("/photos/evening 6.jpg");
       }
       #parallax7 {
-        background-image: url("/photos/evening\ 7.jpg"); /* تصویر سوم */
+        background-image: url("/photos/evening 7.jpg");
       }
       #parallax8 {
-        background-image: url("/photos/evening\ 8.jpg"); /* تصویر سوم */
+        background-image: url("/photos/evening 5.jpg");
       }
       #parallax9 {
-        background-image: url("/photos/evening\ 9.jpg"); /* تصویر سوم */
+        background-image: url("/photos/evening 9.jpg");
       }
       #parallax10 {
-        background-image: url("/photos/evening\ 2.jpg"); /* تصویر سوم */
+        background-image: url("/photos/evening 2.jpg");
       }
+
       .textcolor {
         border: 2px #d581d7 solid;
         border-radius: 4px;
@@ -80,6 +77,7 @@
       .title1 {
         color: #d3ab87;
       }
+
       @font-face {
         font-family: "as";
         src: url(/font/Shabnam-Bold-FD.woff2);
@@ -95,12 +93,13 @@
         margin: 0;
         padding: 0;
       }
+
       h1 {
-        display: flex; /* فعال کردن Flexbox */
-        justify-content: center; /* مرکز افقی */
-        align-items: center; /* مرکز عمودی */
-        height: 100vh; /* ارتفاع عنصر به اندازه کل صفحه */
-        width: 100%; /* عرض عنصر به اندازه کل صفحه */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        width: 100%;
       }
 
       .s1 {
@@ -133,15 +132,12 @@
       .Card:nth-child(1) {
         background-color: #b881ff;
       }
-
       .Card:nth-child(2) {
         background-color: #ff9950;
       }
-
       .Card:nth-child(3) {
         background-color: #ed6a5e;
       }
-
       .Card:nth-child(4) {
         background-color: #aaec8a;
       }
@@ -157,43 +153,33 @@
   <body>
     <!-- بخش پارالاکس 1 -->
     <div id="parallax1">
-      <!-- گالری و کارت‌ها در بالای صفحه -->
       <div class="Gallery">
         <a class="s1 Card" href="index.html">
           <ul>
-            <li>
-              <img src="home.png" alt="" />
-            </li>
+            <li><img src="/photos/home.png" alt="" /></li>
           </ul>
         </a>
-
         <a class="s1 Card" href="network.html">
           <ul>
-            <li>
-              <img src="history.png" alt="" />
-            </li>
+            <li><img src="/photos/history.png" alt="" /></li>
           </ul>
         </a>
         <a class="s1 Card" href="elements.html">
           <ul>
-            <li><img src="element.png" alt="" /></li>
+            <li><img src="/photos/element.png" alt="" /></li>
           </ul>
         </a>
         <a class="s1 Card" href="about.html">
           <ul>
-            <li>
-              <img src="about.png" alt="" />
-            </li>
+            <li><img src="/photos/about.png" alt="" /></li>
           </ul>
         </a>
       </div>
       <div class="title1">
         <h1 style="font-size: 50px">تگ های تیتر یا Heading در HTML</h1>
       </div>
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
     </div>
 
-    <!-- متن‌ها -->
     <p class="textcolor">
       عناوین یا تیترها یا به انگلیسی Headings از مهمترین تگ ها در حوزه سئو در یک
       صفحه ی HTML می باشد، در واقع میشه گفت مهمترین بخش یک صفحه ی HTML برای بحث
@@ -204,66 +190,42 @@
       می باشد.
     </p>
 
-    <!-- بخش پارالاکس 2 -->
+    <!-- محتوای پارالاکس‌ها -->
     <div id="parallax2">
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
-      <div class="title1">
-        <h1 style="font-size: 50px; font-weight: bold">تگ P در HTML</h1>
-      </div>
+      <div class="title1"><h1>تگ P در HTML</h1></div>
     </div>
-
     <p class="textcolor">
       تگ p که از کلمه Paragraph گرفته شده است ، همانطور که از اسمش مشخصه ، تگی
       است که با استفاده از آن میتوان در یک صفحه وب یک یا چندین پاراگراف را ایجاد
       کرد.
     </p>
 
-    <!-- بخش پارالاکس 3 -->
     <div id="parallax3">
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
-      <div class="title1">
-        <h1 style="font-size: 50px; font-weight: bold">تگ ul چیست؟</h1>
-      </div>
+      <div class="title1"><h1>تگ ul چیست؟</h1></div>
     </div>
-
     <p class="textcolor">
       کلمه ul مخفف UnOrdered List می باشد که به معنی لیست نامرتب می باشد.
     </p>
-    <!-- بخش پارالاکس 4 -->
-    <div id="parallax4">
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
 
-      <div class="title1">
-        <h1 style="font-size: 50px; font-weight: bold">تگ ol چیست؟</h1>
-      </div>
+    <div id="parallax4">
+      <div class="title1"><h1>تگ ol چیست؟</h1></div>
     </div>
     <p class="textcolor">
       متن هایی که در تگ ol قرار می گیرند، دارای شماره گذاری هستند، یعنی ترتیب
       آیتم ها در آن اهمیت دارد.
     </p>
 
-    <!-- بخش پارالاکس 5 -->
     <div id="parallax5">
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
-
-      <div class="title1">
-        <h1 style="font-size: 50px; font-weight: bold">
-          تگ های فرمت دهی در HTML
-        </h1>
-      </div>
+      <div class="title1"><h1>تگ های فرمت دهی در HTML</h1></div>
     </div>
     <p class="textcolor">
       در طراحی صفحات وب، وظیفه گروهی از تگ های HTML فرمت دهی و تعیین شکل نمایش
       متون ( مثلا ضخیم و bold بودن و یا مورب و …) میباشد در این مقاله آموزشی، با
       این گروه از تگها (formatting tags) آشنا خواهید شد:
     </p>
-    <!-- بخش پارالاکس 6 -->
-    <div id="parallax6">
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
 
-      <div class="title1">
-        <h1 style="font-size: 50px; font-weight: bold">کامنت گذاشتن در HTML</h1>
-      </div>
+    <div id="parallax6">
+      <div class="title1"><h1>کامنت گذاشتن در HTML</h1></div>
     </div>
     <p class="textcolor">
       کامنت ها به نوشته هایی گفته میشود که معمولا برای توضیح ، در قسمتی از سورس
@@ -272,54 +234,38 @@
       با استفاده از تگ !– … – در HTML می توان کامنت های مورد نظرتان را به سند
       HTML اضافه کنید.
     </p>
-    <!-- بخش پارالاکس 7 -->
-    <div id="parallax7">
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
 
-      <div class="title1">
-        <h1 style="font-size: 50px; font-weight: bold">تگ Link در HTML</h1>
-      </div>
+    <div id="parallax7">
+      <div class="title1"><h1>تگ Link در HTML</h1></div>
     </div>
     <p class="textcolor">
       تگ link یکی از تگ های پراستفاده در قسمت هد ( Head ) یک صفحه وب می باشد،
       تگی است که با استفاده از آن میتوان فایل های CSS خارجی رو وارد صفحه کرد.
     </p>
-    <!-- بخش پارالاکس 8 -->
-    <div id="parallax8">
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
 
-      <div class="title1">
-        <h1 style="font-size: 50px; font-weight: bold">آموزش تگ img در HTML</h1>
-      </div>
+    <div id="parallax8">
+      <div class="title1"><h1>آموزش تگ img در HTML</h1></div>
     </div>
     <p class="textcolor">
       تگ img همونطور که از اسمش مشخصه از کلمه ( Image ) گرفته شده است، تگی است
       که با استفاده از آن میتوان تصویر / عکس را در یک صفحه وب قرار داد.
     </p>
-    <!-- بخش پارالاکس 9 -->
+
     <div id="parallax9">
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
-
-      <div class="title1">
-        <h1 style="font-size: 50px; font-weight: bold">تگ Picture در HTML</h1>
-      </div>
+      <div class="title1"><h1>تگ Picture در HTML</h1></div>
     </div>
     <p class="textcolor">
-      تگ picture تگی است همانند یک کانتینر ( Container ) یا یک ظرف برای نگهداری
-      ۱ یا چندین عکس ، که با استفاده از آن میتوان یک یا چندین عکس رو در اندازه
-      های مختلف صفحه نمایش به نمایش گذاشت.
+      تگ picture یکی از تگ های HTML 5 می باشد، تگی است که به برنامه نویسان وب
+      این اجازه را می دهد که تصاویر را بر اساس رزولوشن صفحه نمایش ، در صفحات وب
+      نمایش دهند.
     </p>
-    <!-- بخش پارالاکس 10 -->
-    <div id="parallax10">
-      <!-- پس‌زمینه ثابت و فول اسکرین -->
 
-      <div class="title1">
-        <h1 style="font-size: 50px; font-weight: bold">تگ Table در HTML</h1>
-      </div>
+    <div id="parallax10">
+      <div class="title1"><h1>تگ Table در HTML</h1></div>
     </div>
     <p class="textcolor">
-      تگ table همونطور که از اسمشم مشخصه، برای ساخت جدول استفاده میشه و در واقع
-      می توانیم با استفاده از آن داده ها را به شکل جدول در صفحه نمایش دهیم.
+      تگ Table یا جدول یکی از پر استفاده ترین تگ های HTML برای نمایش اطلاعات و
+      داده ها بصورت جدولی و مرتب در صفحات وب می باشد.
     </p>
   </body>
 </html>
