--- a/network.html
+++ b/network.html
@@ -8,10 +8,13 @@
       }
       body {
         font-family: impact;
-        background-color: #28183d;
-        color: #ffc107;
-        background-size: 700px;
-
+        background-image: url(/photos/evening\ 5.jpg);
+        color: #240116;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        color: #e8991bec;
       }
       img {
         width: 30px;
@@ -55,7 +58,7 @@
       <a class="s1 Card" href="index.html">
         <ul>
           <li>
-            <img src="home.png" alt="" />
+            <img src="/photos/home.png" alt="" />
           </li>
         </ul>
       </a>
@@ -63,19 +66,19 @@
       <a class="s1 Card" href="network.html">
         <ul>
           <li>
-            <img src="history.png" alt="" />
+            <img src="/photos/history.png" alt="" />
           </li>
         </ul>
       </a>
       <a class="s1 Card" href="elements.html">
         <ul>
-          <li><img src="element.png" alt="" /></li>
+          <li><img src="/photos/element.png" alt="" /></li>
         </ul>
       </a>
       <a class="s1 Card" href="about.html">
         <ul>
           <li>
-            <img src="about.png" alt="" />
+            <img src="/photos/about.png" alt="" />
           </li>
         </ul>
       </a>
