--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       }
       body {
         font-family: impact;
-        background-image: url(/photos/evening\ 2.jpg);
+        background-image: url(/photos/evening\ 6.jpg);
         color: #240116;
         background-attachment: fixed;
         background-position: center;
@@ -58,7 +58,7 @@
       <a class="s1 Card" href="index.html">
         <ul>
           <li>
-            <img src="home.png" alt="" />
+            <img src="/photos/home.png" alt="" />
           </li>
         </ul>
       </a>
@@ -66,19 +66,19 @@
       <a class="s1 Card" href="network.html">
         <ul>
           <li>
-            <img src="history.png" alt="" />
+            <img src="/photos/history.png" alt="" />
           </li>
         </ul>
       </a>
       <a class="s1 Card" href="elements.html">
         <ul>
-          <li><img src="element.png" alt="" /></li>
+          <li><img src="/photos/element.png" alt="" /></li>
         </ul>
       </a>
       <a class="s1 Card" href="about.html">
         <ul>
           <li>
-            <img src="about.png" alt="" />
+            <img src="/photos/about.png" alt="" />
           </li>
         </ul>
       </a>
